--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,6 @@ Thumbs.db
 test_gemini.py
 test_language.py
 test_english_detection.py
-test_multilingual.py
+test_universal_questions.py
+example_responses.md
+
